[package]
name = "cube_worlds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"

pollster = "0.2.5"

glam = "0.21.2"
#bytemuck = "1.9.1"
bytemuck = {version = "1.4", features = ["derive"]}

rand = "*"